// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Albums 1`] = `
<div>
  <div
    class="__max-w-900px_6s96qp_6s96qp s-La5EyvluHg5-"
  >
    <span
      class="undefined albums s-td7QJeJ6dPr_"
    >
      <h3
        class="s-td7QJeJ6dPr_"
      >
        5 albums
      </h3>
       
      <group
        class="s-td7QJeJ6dPr_"
        role="list"
        style="flex-wrap: nowrap;"
      >
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
                >
                  <img
                    alt="./cover.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./cover.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="s-irUkF_IR-GRw"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Album&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
                >
                  <img
                    alt="./cover.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./cover.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="s-irUkF_IR-GRw"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Album&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
                >
                  <img
                    alt="./cover.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./cover.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="s-irUkF_IR-GRw"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Album&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
                >
                  <img
                    alt="./cover.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./cover.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="s-irUkF_IR-GRw"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Album&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
                >
                  <img
                    alt="./cover.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./cover.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Diamonds on the inside
              </h3>
               
              <h4
                class="s-irUkF_IR-GRw"
                slot="details"
              >
                by 
                <a
                  class="underlined"
                  href="#/artist/1"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
                , 
                <a
                  class="underlined"
                  href="#/artist/2"
                  onclick="event.stopPropagation()"
                >
                  The Innocent Criminals
                </a>
                
                 
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Album&gt;-->
           
        </button>
      </group>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
    <!--&lt;ExpandableList&gt;-->
     
    <div
      class="s-La5EyvluHg5-"
    />
  </div>
</div>
`;

exports[`Artists 1`] = `
<div>
  <div
    class="__max-w-900px_6s96qp_6s96qp s-La5EyvluHg5-"
  >
    <span
      class="undefined artists s-td7QJeJ6dPr_"
    >
      <h3
        class="s-td7QJeJ6dPr_"
      >
        5 artists
      </h3>
       
      <group
        class="s-td7QJeJ6dPr_"
        role="list"
        style="flex-wrap: nowrap;"
      >
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
                >
                  <img
                    alt="./avatar.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./avatar.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="s-9pbhBDjb6W8T"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Artist&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
                >
                  <img
                    alt="./avatar.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./avatar.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="s-9pbhBDjb6W8T"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Artist&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
                >
                  <img
                    alt="./avatar.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./avatar.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="s-9pbhBDjb6W8T"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Artist&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
                >
                  <img
                    alt="./avatar.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./avatar.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="s-9pbhBDjb6W8T"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Artist&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
           
          <span
            class=" s-y8aqkkbOYo4q"
            role="tab"
            tabindex="0"
          >
            <div
              class="content s-y8aqkkbOYo4q"
            >
              <span
                class="artwork s-y8aqkkbOYo4q"
              >
                <button
                  class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_ricfrc_ricfrc __w-full_ricfrc_ricfrc s-JU4hIbuSbdGN __rounded-full_tliuhg_tliuhg"
                >
                  <img
                    alt="./avatar.jpg"
                    class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                    loading="lazy"
                    src="./avatar.jpg"
                  />
                   
                </button>
                <!--&lt;Image&gt;-->
              </span>
               
              <p
                class="controls s-y8aqkkbOYo4q"
              >
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="play"
                >
                  <i
                    class="icons i-mdi-play s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
                 
                <button
                  class="primary iconOnly large s-zdMNlEQUhDx4"
                  data-testid="enqueue"
                >
                  <i
                    class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
                  />
                   
                   
                   
                </button>
                <!--&lt;Button&gt;-->
              </p>
            </div>
             
            <header
              class="s-y8aqkkbOYo4q"
            >
              <h3
                class="s-y8aqkkbOYo4q"
              >
                Foo Fighters
              </h3>
               
              <h4
                class="s-9pbhBDjb6W8T"
                slot="details"
              >
                2 albums
              </h4>
            </header>
          </span>
          <!--&lt;GridItem&gt;-->
          <!--&lt;Artist&gt;-->
           
        </button>
      </group>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
    <!--&lt;ExpandableList&gt;-->
  </div>
</div>
`;

exports[`Tracks 1`] = `
<div>
  <div
    class="__max-w-900px_6s96qp_6s96qp s-La5EyvluHg5-"
  >
    <span
      class="undefined tracks s-td7QJeJ6dPr_"
    >
      <h3
        class="s-td7QJeJ6dPr_"
      >
        5 tracks
      </h3>
       
      <group
        class="s-td7QJeJ6dPr_"
        role="list"
        style="flex-wrap: nowrap;"
      >
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
          <button
            class="undefined root s-B4OUyNjosq8C"
          >
            <a
              class="s-B4OUyNjosq8C"
              href="#/album/1"
            >
              <button
                class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
              >
                <img
                  alt="./cover.jpg"
                  class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                  loading="lazy"
                  src="./cover.jpg"
                />
                 
              </button>
              <!--&lt;Image&gt;-->
            </a>
             
            <div
              class="track s-B4OUyNjosq8C"
            >
              <span
                class="title s-B4OUyNjosq8C"
              >
                Mama got a girlfriend
              </span>
               
              <span
                class="s-B4OUyNjosq8C"
              >
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper s-vOP9EO5q76eY"
            >
              <button
                class="iconOnly noBorder s-zdMNlEQUhDx4"
                data-testid="track-dropdown"
              >
                <i
                  class="icons i-mdi-dots-vertical s-zdMNlEQUhDx4"
                />
                 
                 
                
                 
              </button>
              <!--&lt;Button&gt;-->
            </span>
             
            
            <!--&lt;Dropdown&gt;-->
            <!--&lt;TrackDropdown&gt;-->
          </button>
          <!--&lt;Track&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
          <button
            class="undefined root s-B4OUyNjosq8C"
          >
            <a
              class="s-B4OUyNjosq8C"
              href="#/album/1"
            >
              <button
                class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
              >
                <img
                  alt="./cover.jpg"
                  class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                  loading="lazy"
                  src="./cover.jpg"
                />
                 
              </button>
              <!--&lt;Image&gt;-->
            </a>
             
            <div
              class="track s-B4OUyNjosq8C"
            >
              <span
                class="title s-B4OUyNjosq8C"
              >
                Mama got a girlfriend
              </span>
               
              <span
                class="s-B4OUyNjosq8C"
              >
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper s-vOP9EO5q76eY"
            >
              <button
                class="iconOnly noBorder s-zdMNlEQUhDx4"
                data-testid="track-dropdown"
              >
                <i
                  class="icons i-mdi-dots-vertical s-zdMNlEQUhDx4"
                />
                 
                 
                
                 
              </button>
              <!--&lt;Button&gt;-->
            </span>
             
            
            <!--&lt;Dropdown&gt;-->
            <!--&lt;TrackDropdown&gt;-->
          </button>
          <!--&lt;Track&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
          <button
            class="undefined root s-B4OUyNjosq8C"
          >
            <a
              class="s-B4OUyNjosq8C"
              href="#/album/1"
            >
              <button
                class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
              >
                <img
                  alt="./cover.jpg"
                  class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                  loading="lazy"
                  src="./cover.jpg"
                />
                 
              </button>
              <!--&lt;Image&gt;-->
            </a>
             
            <div
              class="track s-B4OUyNjosq8C"
            >
              <span
                class="title s-B4OUyNjosq8C"
              >
                Mama got a girlfriend
              </span>
               
              <span
                class="s-B4OUyNjosq8C"
              >
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper s-vOP9EO5q76eY"
            >
              <button
                class="iconOnly noBorder s-zdMNlEQUhDx4"
                data-testid="track-dropdown"
              >
                <i
                  class="icons i-mdi-dots-vertical s-zdMNlEQUhDx4"
                />
                 
                 
                
                 
              </button>
              <!--&lt;Button&gt;-->
            </span>
             
            
            <!--&lt;Dropdown&gt;-->
            <!--&lt;TrackDropdown&gt;-->
          </button>
          <!--&lt;Track&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
          <button
            class="undefined root s-B4OUyNjosq8C"
          >
            <a
              class="s-B4OUyNjosq8C"
              href="#/album/1"
            >
              <button
                class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
              >
                <img
                  alt="./cover.jpg"
                  class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                  loading="lazy"
                  src="./cover.jpg"
                />
                 
              </button>
              <!--&lt;Image&gt;-->
            </a>
             
            <div
              class="track s-B4OUyNjosq8C"
            >
              <span
                class="title s-B4OUyNjosq8C"
              >
                Mama got a girlfriend
              </span>
               
              <span
                class="s-B4OUyNjosq8C"
              >
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper s-vOP9EO5q76eY"
            >
              <button
                class="iconOnly noBorder s-zdMNlEQUhDx4"
                data-testid="track-dropdown"
              >
                <i
                  class="icons i-mdi-dots-vertical s-zdMNlEQUhDx4"
                />
                 
                 
                
                 
              </button>
              <!--&lt;Button&gt;-->
            </span>
             
            
            <!--&lt;Dropdown&gt;-->
            <!--&lt;TrackDropdown&gt;-->
          </button>
          <!--&lt;Track&gt;-->
           
        </button>
        <button
          class="s-td7QJeJ6dPr_"
          style="visibility: visible;"
        >
          <button
            class="undefined root s-B4OUyNjosq8C"
          >
            <a
              class="s-B4OUyNjosq8C"
              href="#/album/1"
            >
              <button
                class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-16_cxt0i8_cxt0i8 __w-16_cxt0i8_cxt0i8 __text-xs_cxt0i8_cxt0i8 actionable s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
              >
                <img
                  alt="./cover.jpg"
                  class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
                  loading="lazy"
                  src="./cover.jpg"
                />
                 
              </button>
              <!--&lt;Image&gt;-->
            </a>
             
            <div
              class="track s-B4OUyNjosq8C"
            >
              <span
                class="title s-B4OUyNjosq8C"
              >
                Mama got a girlfriend
              </span>
               
              <span
                class="s-B4OUyNjosq8C"
              >
                <a
                  class="text-sm underlined"
                  href="#/artist/0"
                  onclick="event.stopPropagation()"
                >
                  Ben Harper
                </a>
              </span>
            </div>
             
             
            <span
              aria-expanded="false"
              aria-haspopup="menu"
              class="wrapper s-vOP9EO5q76eY"
            >
              <button
                class="iconOnly noBorder s-zdMNlEQUhDx4"
                data-testid="track-dropdown"
              >
                <i
                  class="icons i-mdi-dots-vertical s-zdMNlEQUhDx4"
                />
                 
                 
                
                 
              </button>
              <!--&lt;Button&gt;-->
            </span>
             
            
            <!--&lt;Dropdown&gt;-->
            <!--&lt;TrackDropdown&gt;-->
          </button>
          <!--&lt;Track&gt;-->
           
        </button>
      </group>
       
      <iframe
        aria-hidden="true"
        src="about:blank"
        style="display: block; position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; border: 0; opacity: 0; pointer-events: none; z-index: -1;"
        tabindex="-1"
      />
    </span>
    
    <!--&lt;ExpandableList&gt;-->
     
    <div
      class="s-La5EyvluHg5-"
    />
  </div>
</div>
`;
